<resources>
    <string name="app_name">Chat Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="chat_image">chat image</string>
    <string name="name">Name</string>
    <string name="bhavani">bhavani</string>
    <string name="log_out">Log out</string>
    <string name="type_a_message">Type a message</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="this_is_received_message">This is received message</string>
</resources>