<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/chat_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/chat_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/chat_image"/>

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/chat_img"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edt_txt_background"
        android:hint="@string/email"
        android:paddingStart="12dp" />

    <EditText
        android:id="@+id/passwd_edt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/email_edt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_txt_background"
        android:hint="@string/password"
        android:paddingStart="12dp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@id/passwd_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"/>

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"/>

</RelativeLayout>